--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="content">
                 <h1>Get <strong>insights</strong> that help your businnes grow.</h1>
                 <p>Discover the benefits of data analytics and make better decision regarding 
-                    revenue, cutomer experience, and overall efficiency.</p>
+                    revenue, customer experience, and overall efficiency.</p>
             </div>
             <div class="infos">
                 <div class="info">
